--- a/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
+++ b/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
@@ -17,7 +17,7 @@ function getAllowlistIdentifier: () => Promise<ClerkBackendApiResponse<Allowlist
 const response = await clerkClient.allowlistIdentifiers.getAllowlistIdentifierList();
 
 console.log(response);
-/*
+/* In this example, you can see that data is an array of AllowlistIdentifier objects, and is populated with one AllowlistIdentifier.
 {
   data: [
     _AllowlistIdentifier {
