--- a/docs/references/backend/client/verify-client.mdx
+++ b/docs/references/backend/client/verify-client.mdx
@@ -5,7 +5,7 @@ description: Retrieves a client for a given session token, if the session is act
 
 # `verifyClient()`
 
-Retrieves a client for a given session token, if the session is active.
+Retrieves a [`Client`](/docs/references/javascript/client) for a given session token, if the session is active.
 
 ```tsx
 function verifyClient: (token: string) => Promise<ClerkBackendApiResponse<Client>>;
@@ -15,7 +15,7 @@ function verifyClient: (token: string) => Promise<ClerkBackendApiResponse<Client
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `sessionToken` | `string` | The session token to verify. |
+| `token` | `string` | The session token to verify. |
 
 ## `verifyClient()` Example
 
