--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -8,9 +8,7 @@ description: Retrieves a list of organization invitations that have not yet been
 Retrieves a list of organization invitations that have not yet been accepted.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const invitations = await clerkClient.organizations.getOrganizationInvitationList({ organizationId });
+function getOrganizationInvitationList: (params: GetOrganizationInvitationListParams) => Promise<ClerkBackendApiResponse<OrganizationInvitation[]>>;
 ```
 
 ## `GetOrganizationInvitationListParams`
@@ -22,7 +20,47 @@ const invitations = await clerkClient.organizations.getOrganizationInvitationLis
 | `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
-## Examples
+## `getOrganizationInvitationList()` Examples
+
+### `getOrganizationInvitationList()` With No Parameters
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const response = await clerkClient.organizations.getOrganizationInvitationList({ organizationId });
+
+console.log(response);
+/* In this example, you can see that data is an array of OrganizationInvitation objects, and is populated with two OrganizationInvitations.
+{
+  data: [
+    _OrganizationInvitation {
+      id: 'orginv_2b6b8BKxYmCdSNYtEBdk2aQSlyY',
+      emailAddress: 'testclerk123@gmail.com',
+      role: 'org:member',
+      organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+      createdAt: 1705538313485,
+      updatedAt: 1705538313485,
+      status: 'pending',
+      publicMetadata: {},
+      privateMetadata: {}
+    },
+    _OrganizationInvitation {
+      id: 'orginv_2b6SO8VwBMDn2IMYn0xqiaSxVpN',
+      emailAddress: 'testclerk123@clerk.dev',
+      role: 'org:member',
+      organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+      createdAt: 1705534000014,
+      updatedAt: 1705534817946,
+      status: 'revoked',
+      publicMetadata: {},
+      privateMetadata: {}
+    }
+  ],
+  totalCount: 2,
+  errors: null
+}
+*/
+```
 
 ### `getOrganizationInvitationList({ status })`
 
@@ -31,7 +69,7 @@ Retrieves organization invitation list that is filtered by the status of the inv
 ```tsx
 const organizationId = 'my-organization-id';
 
-const invitations = await clerkClient.organizations.getOrganizationInvitationList({
+const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // returns a list of invitations that have not yet been accepted
   status: [ 'pending' ],
@@ -45,7 +83,7 @@ Retrieves organization invitation list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const invitations = await clerkClient.organizations.getOrganizationInvitationList({
+const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // returns the first 10 results
   limit: 10,
@@ -59,7 +97,7 @@ Retrieves organization invitation list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const invitations = await clerkClient.organizations.getOrganizationInvitationList({
+const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // skips the first 10 results
   offset: 10,
