--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -8,9 +8,7 @@ description: Retrieves a list of memberships for an organization.
 Retrieves a list of memberships for an organization.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const memberships = await clerkClient.organizations.getOrganizationMembershipList({ organizationId });
+function getOrganizationMembershipList: (params: GetOrganizationMembershipListParams) => Promise<ClerkBackendApiResponse<OrganizationMembership[]>>;
 ```
 
 ## `GetOrganizationMembershipListParams`
@@ -23,6 +21,44 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 
 ## Examples
 
+### `getOrganizationMembershipList()` with no parameters
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const response = await clerkClient.organizations.getOrganizationMembershipList({ organizationId });
+
+console.log(response);
+/* In this example, you can see that data is an array of OrganizationMembership objects, and is populated with two OrganizationMemberships.
+{
+  data: [
+    _OrganizationMembership {
+      id: 'orgmem_2b6TUmlDXlo3e9XPq3Wd9EyfIfj',
+      role: 'org:member',
+      publicMetadata: {},
+      privateMetadata: {},
+      createdAt: 1705534546701,
+      updatedAt: 1705534546701,
+      organization: [_Organization],
+      publicUserData: [_OrganizationMembershipPublicUserData]
+    },
+    _OrganizationMembership {
+      id: 'orgmem_2ZUtbeklm2DPSy7jsaLLwf6V8Nq',
+      role: 'org:admin',
+      publicMetadata: {},
+      privateMetadata: {},
+      createdAt: 1702488558867,
+      updatedAt: 1702488558867,
+      organization: [_Organization],
+      publicUserData: [_OrganizationMembershipPublicUserData]
+    }
+  ],
+  totalCount: 2,
+  errors: null
+}
+*/
+```
+
 ### `getOrganizationMembershipList({ limit })`
 
 Retrieves organization membership list that is filtered by the number of results.
@@ -30,7 +66,7 @@ Retrieves organization membership list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const memberships = await clerkClient.organizations.getOrganizationMembershipList({
+const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
   organizationId,
   // returns the first 10 memberships
   limit: 10,
@@ -44,7 +80,7 @@ Retrieves organizaiton membership list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const memberships = await clerkClient.organizations.getOrganizationMembershipList({
+const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
   organizationId,
   // skips the first 10 memberships
   offset: 10,
