--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -5,12 +5,10 @@ description: Retrieves a single organization by the organization ID, if the ID i
 
 # `getOrganization()`
 
-Retrieves a single organization by the organization ID, if the ID is valid. Throws an error if the organization ID is invalid.
+Retrieves a single organization by the organization ID, if the ID is valid.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const organization = await clerkClient.organizations.getOrganization({ organizationId });
+function getOrganization: (params: GetOrganizationParams) => Promise<ClerkBackendApiResponse<Organization>>;
 ```
 
 ## `GetOrganizationParams`
@@ -19,7 +17,37 @@ const organization = await clerkClient.organizations.getOrganization({ organizat
 | --- | --- | --- |
 | `organizationId \| slug` | `string` | The ID of the organization to retrieve, or the slug of the organization to retrieve. |
 
-## Example
+## `getOrganization()` Examples
+
+### `getOrganization()` With No Parameters 
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const response = await clerkClient.organizations.getOrganization({ organizationId });
+
+console.log(response);
+/* In this example, you can see that data is an Organization object.
+{
+  data: _Organization {
+    id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+    name: 'Test',
+    slug: 'test',
+    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+    hasImage: false,
+    createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+    createdAt: 1702488558853,
+    updatedAt: 1705536009506,
+    publicMetadata: {},
+    privateMetadata: {},
+    maxAllowedMemberships: 3,
+    adminDeleteEnabled: true,
+    members_count: undefined
+  },
+  errors: null
+}
+*/
+```
 
 ### `getOrganization(slug)`
 
