--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -8,16 +8,7 @@ description: Updates the metadata associated with a user's organization membersh
 Updates the metadata associated with a user's organization membership.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-
-const userId = 'my-user-id';
-
-const update = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId, userId, {
-  publicMetadata:{
-    "example": "metadata"
-  }
-});
+function updateOrganizationMembershipMetadata: (params: UpdateOrganizationMembershipMetadataParams) => Promise<ClerkBackendApiResponse<OrganizationMembership>>;
 ```
 
 ## `UpdateOrganizationMembershipMetadataParams`
@@ -28,3 +19,18 @@ const update = clerkClient.organizations.updateOrganizationMembershipMetadata(or
 | `userId` | `string` | The user ID associated with the metadata being updated. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
+
+## `updateOrganizationMembershipMetadata()` Example
+
+{/* TODO: The response on this was a promise? Idk, this needs to get looked at */}
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
+
+const { data, errors } = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId, userId, {
+  publicMetadata:{
+    "example": "this value is updated!"
+  }
+});
+```
