--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -8,13 +8,7 @@ description: Updates the metadata associated with the specified organization ID.
 Updates the metadata associated with the specified organization ID.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const update = clerkClient.organizations.updateOrganizationMetadata(organizationId, {
-  publicMetadata:{
-    "example": "metadata"
-  }
-});
+function updateOrganizationMetadata: (organizationId: string, params: UpdateOrganizationMetadataParams) => Promise<ClerkBackendApiResponse<Organization>>;
 ```
 
 ## `UpdateOrganizationMetadataParams`
@@ -24,3 +18,22 @@ const update = clerkClient.organizations.updateOrganizationMetadata(organization
 | `organizationId` | `string` | The ID of the organization to update. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
+
+## `updateOrganizationMetadata()` Example
+
+{/* TODO: Is returning a promise. need someone to help check this.. and then when I get this organization (using getOrganization), the metadata is not updated. so this is definitely not running correctly. */}
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const response = clerkClient.organizations.updateOrganizationMetadata(organizationId, {
+  publicMetadata:{
+    "example": "metadata"
+  }
+});
+
+console.log(response);
+/*
+
+*/
+```
