--- a/docs/references/backend/allowlist/create-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/create-allowlist-identifier.mdx
@@ -27,7 +27,7 @@ const response = await clerkClient.allowlistIdentifiers.createAllowlistIdentifie
 });
 
 console.log(response);
-/*
+/* In this example, you can see that data is an AllowlistIdentifier object.
 {
   data: _AllowlistIdentifier {
     id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
