--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -5,7 +5,7 @@ description: Retrieves a single client by its ID, if the ID is valid.
 
 # `getClient()`
 
-Retrieves a single client by its ID, if the ID is valid.
+Retrieves a single [`Client`](/docs/references/javascript/client) by its ID, if the ID is valid.
 
 ```tsx
 function getClient: (clientId: string) => Promise<ClerkBackendApiResponse<Client>>;
@@ -22,5 +22,22 @@ function getClient: (clientId: string) => Promise<ClerkBackendApiResponse<Client
 ```tsx
 const clientId = 'my-client-id';
 
-const { data, errors } = await clerkClient.clients.getClient(clientId);
+const response = await clerkClient.clients.getClient(clientId);
+
+console.log(response);
+/*
+{
+  data: _Client {
+    id: 'client_2b6J9fCrQt0KRCCtFu7WCIQvSfd',
+    sessionIds: [ 'sess_2b6M8I4VZ1wMtgXGQeDe3SJD3cG' ],
+    sessions: [ [_Session] ],
+    signInId: null,
+    signUpId: null,
+    lastActiveSessionId: 'sess_2b6M8I4VZ1wMtgXGQeDe3SJD3cG',
+    createdAt: 1705529444202,
+    updatedAt: 1705530913279
+  },
+  errors: null
+}
+*/
 ```
