--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -8,7 +8,7 @@ description: Retrieves a list of all non-revoked invitations for your applicatio
 Retrieves a list of all non-revoked invitations for your application, sorted by descending creation date.
 
 ```tsx
-const invitations = await clerkClient.invitations.getInvitationList();
+function getInvitationList: (params: GetInvitationListParams) => Promise<ClerkBackendApiResponse<Invitation[]>>;
 ```
 
 ## `GetInvitationListParams`
@@ -17,7 +17,32 @@ const invitations = await clerkClient.invitations.getInvitationList();
 | --- | --- | --- |
 | `status?` | `accepted /| pending /| revoked` | Filter by invitation status. |
 
-## Example
+## `getInvitationList()` Examples
+
+### `getInvitationList()` with no params
+
+```tsx
+const response = await clerkClient.invitations.getInvitationList();
+
+console.log(response);
+/* In this example, you can see that data is an array of Invitation objects, and is populated with only one Invitation.
+{
+  data: [
+    _Invitation {
+      id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
+      emailAddress: 'invite@example.com',
+      publicMetadata: [Object],
+      createdAt: 1705531674576,
+      updatedAt: 1705531674576,
+      status: 'pending',
+      revoked: undefined
+    }
+  ],
+  totalCount: 1,
+  errors: null
+}
+*/
+```
 
 ### `getInvitationList({ status })`
 
@@ -25,5 +50,24 @@ Retrieves list of invitations that have been revoked.
 
 ```tsx
 // get all revoked invitations
-const invitations = await clerkClient.invitations.getInvitationList({ status: 'revoked'});
+const response = await clerkClient.invitations.getInvitationList({ status: 'revoked'});
+
+console.log(response);
+/* In this example, you can see that data is an array of Invitation objects, and is populated with only one Invitation.
+{
+  data: [
+    _Invitation {
+      id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
+      emailAddress: 'invite@example.com',
+      publicMetadata: [Object],
+      createdAt: 1705531674576,
+      updatedAt: 1705531674576,
+      status: 'pending',
+      revoked: undefined
+    }
+  ],
+  totalCount: 1,
+  errors: null
+}
+*/
 ```
