--- a/docs/references/backend/invitations/revoke-invitation.mdx
+++ b/docs/references/backend/invitations/revoke-invitation.mdx
@@ -12,13 +12,35 @@ Revoking an invitation makes the invitation email link unusable. However, it doe
 Only active (i.e. non-revoked) invitations can be revoked.
 
 ```tsx
-const invitationId = 'inv_some-id';
-
-const invitation = await clerkClient.invitations.revokeInvitation(invitationId);
+function revokeInvitation: (invitationId: string) => Promise<ClerkBackendApiResponse<Invitation>>;
 ```
 
-## Required parameters
+## `revokeInvitation()` Params
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `invitationId` | `string` | The ID of the invitation to revoke. |
+
+## `revokeInvitation()` Example
+
+```tsx
+const invitationId = 'inv_some-id';
+
+const response = await clerkClient.invitations.revokeInvitation(invitationId);
+
+console.log(response);
+/* In this example, you can see that data is an Invitation object. The status is set to 'revoked' and the `revoked` property is set to `true`.
+{
+  data: _Invitation {
+    id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
+    emailAddress: 'invite@example.com',
+    publicMetadata: { example: 'metadata', example_nested: [Object] },
+    createdAt: 1705531674576,
+    updatedAt: 1705533499411,
+    status: 'revoked',
+    revoked: true
+  },
+  errors: null
+}
+*/
+```
