--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -5,18 +5,10 @@ description: Creates an invitation for new users to join an organization.
 
 # `createOrganizationInvitation()`
 
-Creates an invitation for new users to join an organization.
+Creates an invitation for new users to join an organization. 
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const inviterUserId = 'my-user-id';
-
-const emailAddress = 'user-email-address';
-
-const role = 'role-to-assign-user';
-
-const organization = await clerkClient.organizations.createOrganizationInvitation({organizationId, inviterUserId, emailAddress, role});
+function createOrganizationInvitation: (params: CreateOrganizationInvitationParams) => Promise<ClerkBackendApiResponse<OrganizationInvitation>>;
 ```
 
 ## `CreateOrganizationInvitationParams`
@@ -29,3 +21,35 @@ const organization = await clerkClient.organizations.createOrganizationInvitatio
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) to assign the invited user within the organization. |
 | `redirectUrl?` | `string` | The URL users will land at once the organization invitation has been accepted. | 
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the invitation that is visible to both your Frontend and Backend APIs. | 
+
+## `createOrganizationInvitation()` Example
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const inviterUserId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
+
+const emailAddress = 'testclerk123@clerk.dev';
+
+const role = 'org:member';
+
+const response = await clerkClient.organizations.createOrganizationInvitation({organizationId, inviterUserId, emailAddress, role});
+
+console.log(response);
+/* In this example, you can see that data is an OrganizationInvitation object.
+{
+  data: _OrganizationInvitation {
+    id: 'orginv_2b6SO8VwBMDn2IMYn0xqiaSxVpN',
+    emailAddress: 'testclerk123@clerk.dev',
+    role: 'org:member',
+    organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+    createdAt: 1705534000014,
+    updatedAt: 1705534000014,
+    status: 'pending',
+    publicMetadata: {},
+    privateMetadata: {}
+  },
+  errors: null
+}
+*/
+```
