--- a/docs/references/backend/organization/create-organization-membership.mdx
+++ b/docs/references/backend/organization/create-organization-membership.mdx
@@ -5,16 +5,10 @@ description: Creates membership to an organization for a user directly (circumve
 
 # `createOrganizationMembership()` 
 
-Creates membership to an organization for a user directly (circumventing the need for an invitation).
+Creates membership to an organization for a user directly (circumventing the need for an invitation). 
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const userId = 'my-user-id';
-
-const role = 'role-to-assign-user';
-
-const organization = await clerkClient.organizations.createOrganizationMembership({organizationId, userId, role});
+function createOrganizationMembership: (params: CreateOrganizationMembershipParams) => Promise<ClerkBackendApiResponse<OrganizationMembership>>;
 ```
 
 ## `CreateOrganizationMembershipParams`
@@ -24,3 +18,53 @@ const organization = await clerkClient.organizations.createOrganizationMembershi
 | `organizationId` | `string` | The organization ID of the organization a user is being added to. |
 | `userId` | `string` | The user ID of the user being added to the organization. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) to assign the added user within the organization. |
+
+## `createOrganizationMembership()` Example
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const userId = 'user_2VdArFEn2gfBqt8sRePmsVPyDHv';
+
+const role = 'org:member';
+
+const response = await clerkClient.organizations.createOrganizationMembership({organizationId, userId, role});
+
+console.log(response);
+/* In this example, you can see that data is an OrganizationMembership object.
+{
+  data: _OrganizationMembership {
+    id: 'orgmem_2b6TUmlDXlo3e9XPq3Wd9EyfIfj',
+    role: 'org:member',
+    publicMetadata: {},
+    privateMetadata: {},
+    createdAt: 1705534546701,
+    updatedAt: 1705534546701,
+    organization: _Organization {
+      id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+      name: 'Test',
+      slug: 'test',
+      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+      hasImage: false,
+      createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+      createdAt: 1702488558853,
+      updatedAt: 1705534260298,
+      publicMetadata: {},
+      privateMetadata: {},
+      maxAllowedMemberships: 3,
+      adminDeleteEnabled: true,
+      members_count: undefined
+    },
+    publicUserData: _OrganizationMembershipPublicUserData {
+      identifier: 'testclerk123@gmail.com',
+      firstName: 'test',
+      lastName: 'account',
+      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yVmRBckFNNWNyRUpxaGdmb3cydVBHZ29US2QifQ',
+      hasImage: true,
+      userId: 'user_2VdArFEn2gfBqt8sRePmsVPyDHv'
+    }
+  },
+  errors: null
+}
+*/
+```
