--- a/docs/references/backend/organization/delete-organization.mdx
+++ b/docs/references/backend/organization/delete-organization.mdx
@@ -1,20 +1,39 @@
 ---
 title: deleteOrganization()
-description: Deletes an organization given a valid ID. Throws an error otherwise.
+description: Deletes an organization given a valid ID. 
 ---
 
 # `deleteOrganization()`
 
-Deletes an organization given a valid ID. Throws an error otherwise.
+Deletes an organization given a valid ID.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const organization = await clerkClient.organizations.deleteOrganization(organizationId);
+function deleteOrganization: (organizationId: string) => Promise<ClerkBackendApiResponse<Organization>>;
 ```
 
-## Required params 
+## `deleteOrganization()` Parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to delete. |
+
+## `deleteOrganization()` Example
+
+```tsx
+const organizationId = 'org_2b6TtF4XlxDsKo6t0E0UyywGB72';
+
+const response = await clerkClient.organizations.deleteOrganization(organizationId);
+
+console.log(response);
+/*
+{
+  data: _DeletedObject {
+    object: 'organization',
+    id: 'org_2b6TtF4XlxDsKo6t0E0UyywGB72',
+    slug: null,
+    deleted: true
+  },
+  errors: null
+}
+*/
+```
