--- a/docs/references/backend/organization/revoke-organization-invitation.mdx
+++ b/docs/references/backend/organization/revoke-organization-invitation.mdx
@@ -8,13 +8,7 @@ description: Revokes an organization invitation from a user for the specified or
 Revokes an organization invitation from a user for the specified organization.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const invitationId = 'my-invitation-id';
-
-const requestingUserId = 'my-user-id';
-
-const organization = await clerkClient.organizations.revokeOrganizationInvitation({organizationId, invitationId, requestingUserId});
+function revokeOrganizationInvitation: (params: RevokeOrganizationInvitationParams) => Promise<ClerkBackendApiResponse<OrganizationInvitation>>;
 ```
 
 ## `RevokeOrganizationInvitationParams`
@@ -24,3 +18,33 @@ const organization = await clerkClient.organizations.revokeOrganizationInvitatio
 | `organizationId` | `string` | The ID of the organization the user was invited to. |
 | `invitationId` | `string` | The ID of the invitation to be revoked. |
 | `requestingUserId` | `string` | The ID of the user revoking the organization invitation. |
+
+## `revokeOrganizationInvitation()` Example
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const invitationId = 'orginv_2b6b8BKxYmCdSNYtEBdk2aQSlyY';
+
+const requestingUserId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
+
+const response = await clerkClient.organizations.revokeOrganizationInvitation({organizationId, invitationId, requestingUserId});
+
+console.log(response);
+/* In this example, you can see that data is an OrganizationInvitation object. The 'status' is now 'revoked'.
+{
+  data: _OrganizationInvitation {
+    id: 'orginv_2b6b8BKxYmCdSNYtEBdk2aQSlyY',
+    emailAddress: 'testclerk123@gmail.com',
+    role: 'org:member',
+    organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+    createdAt: 1705538313485,
+    updatedAt: 1705538631145,
+    status: 'revoked',
+    publicMetadata: {},
+    privateMetadata: {}
+  },
+  errors: null
+}
+*/
+```
