--- a/docs/references/backend/organization/update-organization-membership.mdx
+++ b/docs/references/backend/organization/update-organization-membership.mdx
@@ -8,13 +8,7 @@ description: Updates a user's organization membership parameters.
 Updates a user's organization membership parameters. Currently, only the role can be updated.
 
 ```tsx
-const organizationId = 'my-organization-id';
-
-const userId = 'my-user-id';
-
-const role = 'role-to-assign-user';
-
-const organization = await clerkClient.organizations.updateOrganizationMembership({organizationId, userId, role});
+function updateOrganizationMembership: (params: UpdateOrganizationMembershipParams) => Promise<ClerkBackendApiResponse<OrganizationMembership>>;
 ```
 
 ## `UpdateOrganizationMembershipParams`
@@ -24,3 +18,53 @@ const organization = await clerkClient.organizations.updateOrganizationMembershi
 | `organizationId` | `string` | The organization ID of the organization a user belongs to. |
 | `userId` | `string` | The ID of the user. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) to assign user. |
+
+## `updateOrganizationMembership()` Example
+
+```tsx
+const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+
+const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
+
+const role = 'org:admin';
+
+const response = await clerkClient.organizations.updateOrganizationMembership({organizationId, userId, role});
+
+console.log(response);
+/* In this example, you can see that data is an OrganizationMembership object.
+{
+  data: _OrganizationMembership {
+    id: 'orgmem_2ZUtbeklm2DPSy7jsaLLwf6V8Nq',
+    role: 'org:admin',
+    publicMetadata: {},
+    privateMetadata: {},
+    createdAt: 1702488558867,
+    updatedAt: 1705535333002,
+    organization: _Organization {
+      id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+      name: 'Test',
+      slug: 'test',
+      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+      hasImage: false,
+      createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+      createdAt: 1702488558853,
+      updatedAt: 1705534260298,
+      publicMetadata: {},
+      privateMetadata: {},
+      maxAllowedMemberships: 3,
+      adminDeleteEnabled: true,
+      members_count: undefined
+    },
+    publicUserData: _OrganizationMembershipPublicUserData {
+      identifier: 'alexis@clerk.dev',
+      firstName: 'Alexis',
+      lastName: 'Aguilar',
+      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yVjdKSkhvdXlnbDNLRXRaUjlRRlFNbnVDU2cuanBlZyJ9',
+      hasImage: true,
+      userId: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56'
+    }
+  },
+  errors: null
+}
+*/
+```
