--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -31,7 +31,7 @@ With the recommended matcher, all routes are matched by Clerk's authentication M
 
 ## Environment Variables
 
-If you are building your own sign in pages, you don't need to add these pages to your `publicRoutes`. They will be inferred from your `.env` file:
+If you are building your own sign-in pages, you don't need to add these pages to your `publicRoutes`. They will be inferred from your `.env` file:
 
 ```ts filename=".env"
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
