--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -42,7 +42,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 ## Protect Multiple Routes
 
-`clerkMiddleare()` shipes with the helper function `createRouteMatcher()`. `createRouteMatcher()` allows you to add an array of routes, and then check if the route the user is trying to visit matches one of the routes. You can use this matcher to protect multiple routes. The paths provided to this helper can be in the same format as the paths provided tothe Next Middleware matcher.  
+`clerkMiddleare()` ships with the helper function `createRouteMatcher()`. `createRouteMatcher()` allows you to add an array of routes, which returns a function that takes in the `request` object to then check if the route the user is trying to visit matches one of the routes. You can use this matcher to protect multiple routes. The paths provided to this helper can be in the same format as the paths provided to the Next Middleware matcher.  
 
 In the following example the routes `/dashboard(.*)` and `/forum(.*)` are passed to the `createRouteMatcher()` function and assigned to `isProtectedRoute`. The Middleware logic then tests if the current route is one of the protected routes with `isProtectedRoutes(req)`, which will return true if it matches and false if it does not. 
 
