--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -165,7 +165,7 @@ if (protectedRoute(req)) {
 
 ## Debug your middleware
 
-If you are having issues getting your Middleware dialed in, or are trying to narrow down auth-related issues, you can use the debugging feature in `clerkMiddlware()`. Add debug: true to `clerkMiddlware()` and you will get debug logs in your terminal.
+If you are having issues getting your Middleware dialed in, or are trying to narrow down auth-related issues, you can use the debugging feature in `clerkMiddlware()`. Add `{ debug: true }` to `clerkMiddlware()` and you will get debug logs in your terminal.
 
 ```tsx filename="middleware.ts" {6}
 import { clerkMiddleware } from '@clerk/nextjs/server';
