--- a/docs/references/nextjs/route-protection.mdx
+++ b/docs/references/nextjs/route-protection.mdx
@@ -16,7 +16,7 @@ Clerk offers you, the developer, any options to secure the routes in their appli
 
 ### Intregration with Organizations and Roles
 
-`clerkMiddleware()` provites a new `auth().protect()` method that can be used when creating rules to protect pages. This will integrate with Organization role and permissions, allowing you to protect routes based on the permissions or roles a user has.
+`clerkMiddleware()` provides a new `auth().protect()` method that can be used when creating rules to protect pages. This will integrate with Organization role and permissions, allowing you to protect routes based on the permissions or roles a user has.
 
 ### Protect via Middleware, routes, pages, or a mixture of all three
 
