--- a/docs/references/nextjs/route-protection.mdx
+++ b/docs/references/nextjs/route-protection.mdx
@@ -25,7 +25,7 @@ With the opt-in approach of `clerkMiddleware()` you are free to protect your rou
 
 ## Middleware only
 
-Does your application have limited or straight forward route protection needs? Configuring your protection in Middleware and only Middleware could be the play. Perhap your application is only available to signed in users, or most of your app is under the `/dashboard` route and only available for signed in users. In this case protecting from Middleware is a central location that enables this protection.
+Does your application have limited or straightforward route protection needs? Configuring your protection in Middleware and only Middleware could be the right choice for you. Perhaps your application is only available to signed in users, or most of your app is under the `/dashboard` route and only available for signed in users. In this case protecting from Middleware is a central location that enables this protection.
 
 The following will require users to be logged in to access the `/dashboard` route, and if they are not it will redirect to sign the sign-in route.
 
