--- a/docs/references/nextjs/route-protection.mdx
+++ b/docs/references/nextjs/route-protection.mdx
@@ -117,7 +117,7 @@ if (!auth().has({ role: "org:admin" })) {
 
 ## Layout or page only
 
-Clerk's `clerkMiddleware()` is purely opt-in, meaning if ou don't add any specific protection to the Middleware all routes are public. This allows you to then enforce protections via only layouts or even pages and keep your protection logic scoped to that specific area it govens in your application.
+Since Clerk's `clerkMiddleware()` is purely opt-in, meaning if you don't add any specific protection to the Middleware all routes are by default public. This allows you to then enforce protections via only layouts or even pages and keep your protection logic scoped to that specific area it governs, in your application.
 
 
 ### Layout example
