feat: error type checking with ClerkAPIError and isClerkAPIResponseError

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -14,20 +14,21 @@ A user is attempting to sign up with your application, but they are attempting t
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useState, SyntheticEvent } from "react";
-import { useSignUp } from "@clerk/clerk-react";
+import { useSignUp, isClerkAPIResponseError } from "@clerk/clerk-react";
+import { ClerkAPIError } from '@clerk/types';
 
 function Example() {
   const [emailAddress, setEmailAddress] = useState('');
   const [password, setPassword] = useState('');
-  const [error, setError] = useState<Error>();
+  const [errors, setErrors] = useState<ClerkAPIError[]>();
 
   const { isLoaded, signUp, setActive } = useSignUp();
 
   const attemptSignUp = async (e: SyntheticEvent) => {
     e.preventDefault();
 
-    // clear any error that may have occured during previous form submission
-    setError(undefined);
+    // clear any errors that may have occured during previous form submission
+    setErrors(undefined);
 
     if (!isLoaded || !signUp) return;
 
@@ -40,7 +41,7 @@ function Example() {
         // other possible status are 'abandoned' & 'missing_requirements'
       }
     } catch(err: unknown) {
-      if(err instanceof Error) setError(err);
+      if (isClerkAPIResponseError(err)) setErrors(err.errors);
       return; 
     }
   };
@@ -67,9 +68,9 @@ function Example() {
         />
       </div>
 
-      {error &&
+      {errors &&
         <ul>
-          {error.errors.map((el, index) => <li key={index}>{el.message}</li>)}
+          {errors.map((el, index) => <li key={index}>{el.message}</li>)}
         </ul>
       }
 
@@ -96,20 +97,21 @@ Errors returned from the [`signIn()`](/docs/references/react/use-sign-in) functi
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useState, SyntheticEvent } from "react";
-import { useSignIn } from "@clerk/clerk-react";
+import { useSignIn, isClerkAPIResponseError } from "@clerk/clerk-react";
+import { ClerkAPIError } from '@clerk/types';
 
 function Example() {
   const [emailAddress, setEmailAddress] = useState('');
   const [password, setPassword] = useState('');
-  const [error, setError] = useState<Error>();
+  const [errors, setErrors] = useState<ClerkAPIError[]>();
 
   const { isLoaded, signIn, setActive } = useSignIn();
 
   const attemptSignIn = async (e: SyntheticEvent) => {
     e.preventDefault();
 
-    // clear any error that may have occured during previous form submission
-    setError(undefined);
+    // clear any errors that may have occured during previous form submission
+    setErrors(undefined);
 
     if (!isLoaded || !signIn) return;
 
@@ -122,8 +124,8 @@ function Example() {
         // other possible status are 'needs_identifier', 'needs_first_factor', 'needs_second_factor' & 'needs_new_password'
       }
     } catch(err: unknown) {
-      if(err instanceof Error) setError(err);
-      return; 
+      if (isClerkAPIResponseError(err)) setErrors(err.errors);
+      return;
     }
   };
 
@@ -149,9 +151,9 @@ function Example() {
         />
       </div>
 
-      {error &&
+      {errors &&
         <ul>
-          {error.errors.map((el, index) => <li key={index}>{el.message}</li>)}
+          {errors.map((el, index) => <li key={index}>{el.message}</li>)}
         </ul>
       }
 
