--- a/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
@@ -11,7 +11,7 @@ Deletes an allowlist identifier, given a valid ID.
 function deleteAllowlistIdentifier: (allowlistIdentifierId: string) => Promise<ClerkBackendApiResponse<AllowlistIdentifier>>;
 ```
 
-## `deleteAllowlistIdentifier()` Params
+## `deleteAllowlistIdentifier()` Parameters
 
 | Name | Type | Description |
 | ---- | --- | --- |
