--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -11,7 +11,7 @@ Retrieves a single [`Client`](/docs/references/javascript/client) by its ID, if 
 function getClient: (clientId: string) => Promise<ClerkBackendApiResponse<Client>>;
 ```
 
-## `getClient()` Params
+## `getClient()` Parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
