--- a/docs/references/backend/invitations/revoke-invitation.mdx
+++ b/docs/references/backend/invitations/revoke-invitation.mdx
@@ -15,7 +15,7 @@ Only active (i.e. non-revoked) invitations can be revoked.
 function revokeInvitation: (invitationId: string) => Promise<ClerkBackendApiResponse<Invitation>>;
 ```
 
-## `revokeInvitation()` Params
+## `revokeInvitation()` Parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
