--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -121,7 +121,7 @@ Session operations are exposed under `clerkClient.sessions`. The following metho
 - [`getSessionList()`](/docs/references/backend/sessions/get-session-list)
 - [`getToken()`](/docs/references/backend/sessions/get-token)
 - [`authenticateRequest()`](/docs/references/backend/sessions/authenticate-request)
-- [`verifySession()`](/docs/references/backend/sessions/verify-session)
+- [`verifySession()` (deprecated)](/docs/references/backend/sessions/verify-session)
 
 ### Session `delete` operations
 
@@ -134,6 +134,7 @@ Client operations are exposed under `clerkClient.clients`. The following methods
 ### Client `get` operations
 
 - [`getClient()`](/docs/references/backend/client/get-client)
+- [`getClientList()` (deprecated)](/docs/references/backend/client/get-client-list)
 - [`verifyClient()`](/docs/references/backend/client/verify-client)
 
 ## Invitation operations
