--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -8,13 +8,32 @@ description: Deletes a user given a valid ID. Throws an error otherwise.
 Deletes a user given a valid ID. Throws an error otherwise.
 
 ```tsx
-const userId = 'my-user-id';
-
-const user = await clerkClient.users.deleteUser(userId);
+function deleteUser: (userId: string) => Promise<ClerkBackendApiResponse<User>>;
 ```
 
-## Required parameters
+## `deleteUser()` Parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The ID of the user to delete. |
+
+## `deleteUser()` Example
+
+```tsx
+const userId = 'user_2b8lKxzUgn5M1hsjaTW1mcjc0iB';
+
+const response = await clerkClient.users.deleteUser(userId);
+
+console.log(response);
+/* 
+{
+  data: _DeletedObject {
+    object: 'user',
+    id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
+    slug: null,
+    deleted: true
+  },
+  errors: null
+}
+*/
+```
