--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -1,5 +1,5 @@
 ---
-title: getUserList() | User Object
+title: getUserList()
 description: The getUserList() method retrieves a list of users.
 ---
 
@@ -8,7 +8,7 @@ description: The getUserList() method retrieves a list of users.
 Retrieves a list of users.
 
 ```tsx
-const users = await clerkClient.users.getUserList();
+function getUserList(): (params: UserListParams) => Promise<ClerkBackendApiResponse<User[]>>;
 ```
 
 ## `UserListParams`
@@ -26,14 +26,62 @@ const users = await clerkClient.users.getUserList();
 | `userId?` | `string[]` | The user ID's to filter by. |
 | `externalId?` | `string[]` | The external ID's to filter by. |
 
-## Examples
+## `getUserList()` Examples
+
+### `getUserList()` With No Parameters
+
+```tsx
+const response = await clerkClient.users.getUserList();
+
+console.log(response);
+/* In this example, you can see that data is an array of User objects, and is populated with 10 Users. For the sake of brevity, we have only shown the first two. 
+{
+  data: [
+    _User {
+      id: 'user_2b8SSmqrlUyWm9FDUGJSiAyNN5u',
+      passwordEnabled: false,
+      totpEnabled: false,
+      backupCodeEnabled: false,
+      twoFactorEnabled: false,
+      banned: false,
+      createdAt: 1705595214166,
+      updatedAt: 1705595214248,
+      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yYjhTU2sxcGE2YVlOclA1V1RCZjRXeHBrYTgifQ',
+      hasImage: true,
+      gender: undefined,
+      birthday: undefined,
+      primaryEmailAddressId: 'idn_2b8SSYlHRtaS4IZnFEC9TChT5PU',
+      primaryPhoneNumberId: null,
+      primaryWeb3WalletId: null,
+      lastSignInAt: 1705595214177,
+      externalId: null,
+      username: null,
+      firstName: 'Michael Dean',
+      lastName: 'Pierce',
+      publicMetadata: {},
+      privateMetadata: {},
+      unsafeMetadata: {},
+      emailAddresses: [Array],
+      phoneNumbers: [],
+      web3Wallets: [],
+      externalAccounts: [Array],
+      lastActiveAt: 1705536000000,
+      createOrganizationEnabled: true
+    },
+    ...
+  ],
+  totalCount: 10,
+  errors: null
+}
+*/
+```
 
 ### `getUserList({ orderBy, limit })`
 
 Retrieves user list that is ordered and filtered by the number of results.
 
 ```tsx
-const sessions = await clerkClient.users.getUserList({
+const { data, errors, totalCount } = await clerkClient.users.getUserList({
   orderBy: '-created_at',
   limit: 10,
 });
@@ -49,7 +97,7 @@ const emailAddress = ['email1@clerk.dev', 'email2@clerk.dev'];
 const phoneNumber = ['+12025550108'];
 
 // If these filters are included, the response will contain only users that own any of these emails and/or phone numbers.
-const sessions = await clerkClient.users.getUserList({ emailAddress, phoneNumber });
+const { data, errors, totalCount } = await clerkClient.users.getUserList({ emailAddress, phoneNumber });
 ```
 
 ### `getUserList({ query })`
@@ -58,7 +106,7 @@ To do a broader match through a list of fields, you can use the query parameter 
 
 ```tsx
 // Matches users with the string `test` matched in multiple user attributes.
-const usersMatchingTest = await clerkClient.users.getUserList({
+const { data, errors, totalCount } = await clerkClient.users.getUserList({
   query: 'test',
 });
 ```
