--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -1,5 +1,5 @@
 ---
-title: updateUser() | User Object
+title: updateUser()
 description: Updates a user with a given ID with attribute values provided in a params object.
 ---
 
@@ -10,11 +10,7 @@ Updates a user with a given ID with attribute values provided in a params object
 The provided ID must be valid, otherwise an error will be thrown.
 
 ```tsx
-const userId = 'my-user-id';
-
-const params = { firstName: 'John', lastName: 'Wick' }; 
-
-const user = await clerkClient.users.updateUser(userId, params);
+function updateUser: (userId: string, params: UpdateUserParams) => Promise<ClerkBackendApiResponse<User>>;
 ```
 
 ## `UpdateUserParams`
@@ -34,7 +30,55 @@ const user = await clerkClient.users.updateUser(userId, params);
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
 | `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
 
-## Examples
+## `updateUser()` Examples
+
+```tsx
+const userId = 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK';
+
+const params = { firstName: 'John', lastName: 'Wick' }; 
+
+const response = await clerkClient.users.updateUser(userId, params);
+
+console.log(response);
+/* In this example, you can see that data is the updated User object, with a `firstName` and `lastName` of "John" and "Wick" respectively.
+{
+  data: _User {
+    id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
+    passwordEnabled: false,
+    totpEnabled: false,
+    backupCodeEnabled: false,
+    twoFactorEnabled: false,
+    banned: false,
+    createdAt: 1705604079724,
+    updatedAt: 1705604359924,
+    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJiOGtRbGVTUk5tY09TQ2RKMVk4cFNScjRtSyIsImluaXRpYWxzIjoiSlcifQ',
+    hasImage: false,
+    gender: undefined,
+    birthday: undefined,
+    primaryEmailAddressId: 'idn_2b8kQl4UaaUIbJKXp7q8KSLskkO',
+    primaryPhoneNumberId: null,
+    primaryWeb3WalletId: null,
+    lastSignInAt: null,
+    externalId: null,
+    username: null,
+    firstName: 'John',
+    lastName: 'Wick',
+    publicMetadata: {},
+    privateMetadata: {},
+    unsafeMetadata: {},
+    emailAddresses: [ [_EmailAddress] ],
+    phoneNumbers: [],
+    web3Wallets: [],
+    externalAccounts: [],
+    lastActiveAt: null,
+    createOrganizationEnabled: true
+  },
+  errors: null
+}
+*/
+```
+
+### `updateUser()` Examples with Frameworks
 
 <Tabs type="framework" items={["Next.js", "Node", "Remix"]}>
   <Tab>
