--- a/docs/references/backend/user/get-count.mdx
+++ b/docs/references/backend/user/get-count.mdx
@@ -1,5 +1,5 @@
 ---
-title: getCount() | User Object
+title: getCount()
 description: Retrieves the total number of users.
 ---
 
@@ -8,12 +8,12 @@ description: Retrieves the total number of users.
 Retrieves the total number of users.
 
 ```tsx
-const totalUsers = await clerkClient.users.getCount();
+function getCount: (params: UserCountParams) => Promise<ClerkBackendApiResponse<number>>;
 ```
 
-This can also be flitered down by adding parameters of the type `UserCountParams`.
-
 ## `UserCountParams`
+
+The total count of users can be filtered down by adding one or more of these parameters.
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -25,7 +25,18 @@ This can also be flitered down by adding parameters of the type `UserCountParams
 | `userId?` | `string` | The user ID's to filter by. |
 | `externalId?` | `string[]` | The external ID's to filter by. |
 
-## Example
+## `getCount()` Examples
+
+### `getCount()` With No Parameters
+
+```tsx
+const response = await clerkClient.users.getCount();
+
+console.log(response);
+/* In this example, you can see that data includes the number of the total count of users, which is 369.
+{ data: 369, errors: null }
+*/
+```
 
 ### `getCount({ query })`
 
@@ -34,5 +45,5 @@ To do a broader match through a list of fields, you can use the query parameter 
 This example retrieves the total number of users matching the query `test`.
 
 ```tsx
-const totalUsersMatchingTest = await clerkClient.users.getCount({ query: 'test' })
+const { data, errors } = await clerkClient.users.getCount({ query: 'test' })
 ```
