--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -1,20 +1,64 @@
 ---
-title: getUser() | User Object
-description: Retrieves a single user by their ID, if the ID is valid. Throws an error otherwise.
+title: getUser()
+description: Retrieves a single user by their ID, if the ID is valid.
 ---
 
 # `getUser()`
 
-Retrieves a single user by their ID, if the ID is valid. Throws an error otherwise.
+Retrieves a single user by their ID, if the ID is valid. 
 
 ```tsx
-const userId = 'my-user-id';
-
-const user = await clerkClient.users.getUser(userId);
+function getUser: (sessionId: string) => Promise<ClerkBackendApiResponse<User>>;
 ```
 
-## Required parameters
+## `getUser()` Parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The ID of the user to retrieve. |
+
+## `getUser()` Example
+
+```tsx
+const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
+
+const response = await clerkClient.users.getUser(userId);
+
+console.log(response);
+/* In this example, you can see that data is a User object.
+{
+  data: _User {
+    id: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+    passwordEnabled: false,
+    totpEnabled: false,
+    backupCodeEnabled: false,
+    twoFactorEnabled: false,
+    banned: false,
+    createdAt: 1694181111181,
+    updatedAt: 1705601721321,
+    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yVjdKSkhvdXlnbDNLRXRaUjlRRlFNbnVDU2cuanBlZyJ9',
+    hasImage: true,
+    gender: undefined,
+    birthday: undefined,
+    primaryEmailAddressId: 'idn_2V7JJ2R3O7KWHjCmUuEOJESHlPz',
+    primaryPhoneNumberId: null,
+    primaryWeb3WalletId: null,
+    lastSignInAt: 1705601721214,
+    externalId: null,
+    username: null,
+    firstName: 'Alexis',
+    lastName: 'Aguilar',
+    publicMetadata: {},
+    privateMetadata: {},
+    unsafeMetadata: {},
+    emailAddresses: [ [_EmailAddress] ],
+    phoneNumbers: [],
+    web3Wallets: [],
+    externalAccounts: [ [_ExternalAccount] ],
+    lastActiveAt: 1705536000000,
+    createOrganizationEnabled: true
+  },
+  errors: null
+}
+*/
+```
