(wip) Fixed paths in filename to be consistent

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -79,7 +79,7 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
 
     For this project, it makes sense to wrap the `<html />` element with `<ClerkProvider>`. This makes the active session and user context accessible anywhere within the app.
 
-    ```tsx filename="/src/app/layout.tsx" {1,10,14}
+    ```tsx filename="app/layout.tsx" {1,10,14}
     import { ClerkProvider } from '@clerk/nextjs'
     import './globals.css'
 
