(wip) Fixed link

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -232,7 +232,7 @@ export default function Home() {
 ```
 </CodeBlockTabs>
 
-Visit [http://localhost:3000[(http://localhost:3000)] and try signing in to see the protected content and signing out to see the protected and unprotected content.
+Visit [http://localhost:3000](http://localhost:3000)] and try signing in to see the protected content and signing out to see the protected and unprotected content.
 
 ### Deploy your application
 
