--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -168,14 +168,14 @@ import { SignedIn, SignedOut } from "@clerk/nextjs";
 
 export default function Home() {
   return (
-    <>
+    <div>
       <SignedOut>
         <p>This content is public. Only signed out users can see this.</p>
       </SignedOut>
       <SignedIn>
         <p>This content is private. Only signed in users can see this.</p>
       </SignedIn>
-    </>
+    </div>
   );
 }
 ``` 
@@ -217,7 +217,7 @@ import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
-    <>
+    <div>
       <SignedOut>
         <SignInButton />
         <p>This content is public. Only signed out users can see this.</p>
@@ -226,7 +226,7 @@ export default function Home() {
         <UserButton />
         <p>This content is private. Only signed in users can see this.</p>
       </SignedIn>
-    </>
+    </div>
   );
 }
 ```
